--- a/apps/catalog/templates/search/snippets/search-form.html
+++ b/apps/catalog/templates/search/snippets/search-form.html
@@ -1,8 +1,9 @@
-<form method='GET' action='{% url "search:query" %}' class="form my-2 my-lg-0 search-form">
+<form method='GET' action='{% url "query" %}' class="form my-2 my-lg-0 search-form">
   <div class='input-group'>
-    <input class="form-control" type="text" placeholder="Search" name='q' aria-label="Search" value='{{ request.GET.q }}'>
+    <input class="form-control" type="text" placeholder="Search" name='q' aria-label="Search"
+      value='{{ request.GET.q }}'>
     <span class='input-group-btn'>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <button class="btn btn-outline-success" type="submit">Search</button>
     </span>
-    </div>
+  </div>
 </form>
